Add gem mixtures

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -94,6 +94,10 @@
   "item.coread.tigers_eye_leggings": "Tiger's Eye Leggings",
   "item.coread.tigers_eye_boots": "Tiger's Eye Boots",
 
+  "item.coread.blue_gem_mixture": "Blue Gem Mixture",
+  "item.coread.red_gem_mixture": "Red Gem Mixture",
+  "item.coread.shiny_gem_mixture": "Shiny Gem Mixture",
+
   "death.attack.heat": "%1$s died from heat",
 
   "tag.item.coread.repairs_chalcedony_armor": "Repairs Chalcedony Armor",
