Add gem armor repair tag

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -114,5 +114,6 @@
   "tag.item.coread.repairs_ruby_armor": "Repairs Ruby Armor",
   "tag.item.coread.repairs_sapphire_armor": "Repairs Sapphire Armor",
   "tag.item.coread.repairs_spinel_armor": "Repairs Spinel Armor",
-  "tag.item.coread.repairs_tigers_eye_armor": "Repairs Tiger's Eye Armor"
+  "tag.item.coread.repairs_tigers_eye_armor": "Repairs Tiger's Eye Armor",
+  "tag.item.coread.repairs_gem_armor": "Repairs Gem Armor"
 }
