--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -115,5 +115,6 @@
   "tag.item.coread.repairs_sapphire_armor": "Repairs Sapphire Armor",
   "tag.item.coread.repairs_spinel_armor": "Repairs Spinel Armor",
   "tag.item.coread.repairs_tigers_eye_armor": "Repairs Tiger's Eye Armor",
-  "tag.item.coread.repairs_gem_armor": "Repairs Gem Armor"
+  "tag.item.coread.repairs_gem_armor": "Repairs Gem Armor",
+  "tag.item.coread.gem_armor": "Repairs Gem Armor"
 }
