Add heat protection enchantment and make chaining exclusive with fortune/silk touch

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -104,6 +104,7 @@
   "item.coread.gem_boots": "Gem Boots",
 
   "enchantment.coread.chaining": "Chaining",
+  "enchantment.coread.heat_protection": "Heat Protection",
 
   "advancements.coread.story.light_core_portal.title": "Deep Adventures Await",
   "advancements.coread.story.light_core_portal.description": "Build a core portal from reinforced ancient debris and light it",
