Add rest of golems (no unique goals)

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -104,8 +104,26 @@
   "item.coread.gem_boots": "Gem Boots",
 
   "item.coread.chalcedony_golem_spawn_egg": "Chalcedony Golem Spawn Egg",
+  "item.coread.garnet_golem_spawn_egg": "Garnet Golem Spawn Egg",
+  "item.coread.jade_golem_spawn_egg": "Jade Golem Spawn Egg",
+  "item.coread.jasper_golem_spawn_egg": "Jasper Golem Spawn Egg",
+  "item.coread.onyx_golem_spawn_egg": "Onyx Golem Spawn Egg",
+  "item.coread.opal_golem_spawn_egg": "Opal Golem Spawn Egg",
+  "item.coread.ruby_golem_spawn_egg": "Ruby Golem Spawn Egg",
+  "item.coread.sapphire_golem_spawn_egg": "Sapphire Golem Spawn Egg",
+  "item.coread.spinel_golem_spawn_egg": "Spinel Golem Spawn Egg",
+  "item.coread.tigers_eye_golem_spawn_egg": "Tigers Eye Golem Spawn Egg",
 
   "entity.coread.chalcedony_golem": "Chalcedony Golem",
+  "entity.coread.garnet_golem": "Garnet Golem",
+  "entity.coread.jade_golem": "Jade Golem",
+  "entity.coread.jasper_golem": "Jasper Golem",
+  "entity.coread.onyx_golem": "Onyx Golem",
+  "entity.coread.opal_golem": "Opal Golem",
+  "entity.coread.ruby_golem": "Ruby Golem",
+  "entity.coread.sapphire_golem": "Sapphire Golem",
+  "entity.coread.spinel_golem": "Spinel Golem",
+  "entity.coread.tigers_eye_golem": "Tigers Eye Golem",
 
   "enchantment.coread.chaining": "Chaining",
   "enchantment.coread.heat_protection": "Heat Protection",
