Add dynamite item

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -103,6 +103,8 @@
   "item.coread.gem_leggings": "Gem Leggings",
   "item.coread.gem_boots": "Gem Boots",
 
+  "item.coread.dynamite": "Dynamite",
+
   "item.coread.chalcedony_golem_spawn_egg": "Chalcedony Golem Spawn Egg",
   "item.coread.garnet_golem_spawn_egg": "Garnet Golem Spawn Egg",
   "item.coread.jade_golem_spawn_egg": "Jade Golem Spawn Egg",
