Add golem blocks

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -16,18 +16,29 @@
   "block.coread.ruby_ore": "Ruby Ore",
   "block.coread.sapphire_ore": "Sapphire Ore",
   "block.coread.spinel_ore": "Spinel Ore",
-  "block.coread.tigers_eye_ore": "Tiger's eye ore",
+  "block.coread.tigers_eye_ore": "Tiger's Eye ore",
 
-  "block.coread.chalcedony_block": "Chalcedony Block",
-  "block.coread.garnet_block": "Garnet Block",
-  "block.coread.jade_block": "Jade Block",
-  "block.coread.jasper_block": "Jasper Block",
-  "block.coread.onyx_block": "Onyx Block",
-  "block.coread.opal_block": "Opal Block",
-  "block.coread.ruby_block": "Ruby Block",
-  "block.coread.sapphire_block": "Sapphire Block",
-  "block.coread.spinel_block": "Spinel Block",
-  "block.coread.tigers_eye_block": "Tiger's eye block",
+  "block.coread.chalcedony_block": "Block of Chalcedony",
+  "block.coread.garnet_block": "Block of Garnet",
+  "block.coread.jade_block": "Block of Jade",
+  "block.coread.jasper_block": "Block of Jasper",
+  "block.coread.onyx_block": "Block of Onyx",
+  "block.coread.opal_block": "Block of Opal",
+  "block.coread.ruby_block": "Block of Ruby",
+  "block.coread.sapphire_block": "Block of Sapphire",
+  "block.coread.spinel_block": "Block of Spinel",
+  "block.coread.tigers_eye_block": "Block of Tiger's Eye",
+
+  "block.coread.chalcedony_golem_block": "Chalcedony Golem Block",
+  "block.coread.garnet_golem_block": "Garnet Golem Block",
+  "block.coread.jade_golem_block": "Jade Golem Block",
+  "block.coread.jasper_golem_block": "Jasper Golem Block",
+  "block.coread.onyx_golem_block": "Onyx Golem Block",
+  "block.coread.opal_golem_block": "Opal Golem Block",
+  "block.coread.ruby_golem_block": "Ruby Golem Block",
+  "block.coread.sapphire_golem_block": "Sapphire Golem Block",
+  "block.coread.spinel_golem_block": "Spinel Golem Block",
+  "block.coread.tigers_eye_golem_block": "Tiger's Eye Golem block",
 
   "block.coread.reinforced_ancient_debris": "Reinforced Ancient Debris",
 
