Add cracked hardened stone bricks

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -34,6 +34,8 @@
   "block.coread.polished_slate": "Polished Slate",
   "block.coread.polished_travertine": "Polished Travertine",
 
+  "block.coread.cracked_hardened_stone_bricks": "Cracked Hardened Stone Bricks",
+
   "block.coread.hardened_stone_bricks_slab": "Hardened Stone Bricks Slab",
   "block.coread.polished_gabbro_slab": "Polished Gabbro Slab",
   "block.coread.polished_larvikite_slab": "Polished Larvikite Slab",
