Add juniper log and leaves blocks

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -92,6 +92,9 @@
 
   "block.coread.reinforced_ancient_debris": "Reinforced Ancient Debris",
 
+  "block.coread.juniper_log": "Juniper Log",
+  "block.coread.juniper_leaves": "Juniper Leaves",
+
   "block.coread.core_portal_block": "Core Portal",
 
   "item.coread.chalcedony": "Chalcedony",
