Add advancement for entering refuge

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -235,6 +235,8 @@
   "advancements.coread.core.cool_with_any.description": "Cool down next to ice in core",
   "advancements.coread.core.cool_with_blue_ice.title": "Sub Zero experience",
   "advancements.coread.core.cool_with_blue_ice.description": "Cool down next to blue ice in core",
+  "advancements.coread.core.find_refuge.title": "Cave Civilization",
+  "advancements.coread.core.find_refuge.description": "Enter a refuge",
   "advancements.coread.core.summon_golem.title": "Golem Power",
   "advancements.coread.core.summon_golem.description": "Summon a golem by placing the correct gem block over a golem block",
   "advancements.coread.core.summon_golem_with_armor.title": "Prepared for Battle",
