Add recipes and loot tables for juniper blocks

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -260,6 +260,7 @@
   "tag.item.coread.repairs_tigers_eye_armor": "Repairs Tiger's Eye Armor",
   "tag.item.coread.repairs_gem_armor": "Repairs Gem Armor",
   "tag.item.coread.core_armor": "Gem Armor",
+  "tag.item.coread.juniper_logs": "Juniper Logs",
 
   "attribute.name.heat": "Heat",
   "attribute.name.heat_protection": "Heat Protection",
