Add advancement for having refuge compass in core

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -229,13 +229,15 @@
   "advancements.coread.core.get_core_armor.title": "Shiny Style",
   "advancements.coread.core.get_core_armor.description": "Staying cool",
   "advancements.coread.core.get_full_core_armor.title": "Shinier Style",
-  "advancements.coread.core.get_full_core_armor.description": "Get a full suit of any Core armor",
+  "advancements.coread.core.get_full_core_armor.description": "Get a full suit of any core armor",
   "advancements.coread.core.get_full_gem_armor.title": "Shiniest Style",
-  "advancements.coread.core.get_full_gem_armor.description": "Get a full suit of Gem armor",
+  "advancements.coread.core.get_full_gem_armor.description": "Get a full suit of gem armor",
   "advancements.coread.core.cool_with_any.title": "Cool Moment",
   "advancements.coread.core.cool_with_any.description": "Cool down next to ice in core",
   "advancements.coread.core.cool_with_blue_ice.title": "Sub Zero experience",
   "advancements.coread.core.cool_with_blue_ice.description": "Cool down next to blue ice in core",
+  "advancements.coread.core.follow_refuge_compass.title": "Refuge Lookout",
+  "advancements.coread.core.follow_refuge_compass.description": "Follow a Refuge Compass in the core",
   "advancements.coread.core.find_refuge.title": "Cave Civilization",
   "advancements.coread.core.find_refuge.description": "Enter a refuge",
   "advancements.coread.core.summon_golem.title": "Golem Power",
