Add heavy hardened stone bricks

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -35,6 +35,7 @@
   "block.coread.polished_travertine": "Polished Travertine",
 
   "block.coread.cracked_hardened_stone_bricks": "Cracked Hardened Stone Bricks",
+  "block.coread.heavy_hardened_stone_bricks": "Heavy Hardened Stone Bricks",
 
   "block.coread.hardened_stone_bricks_slab": "Hardened Stone Bricks Slab",
   "block.coread.polished_gabbro_slab": "Polished Gabbro Slab",
