--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -114,6 +114,8 @@
 
   "block.coread.core_portal_block": "Core Portal",
 
+  "block.coread.strong_tnt": "Strong TNT",
+
   "item.coread.chalcedony": "Chalcedony",
   "item.coread.garnet": "Garnet",
   "item.coread.jade": "Jade",
