--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -194,6 +194,7 @@
 
   "item.coread.juniper_boat": "Juniper Boat",
   "item.coread.juniper_chest_boat": "Juniper Chest Boat",
+  "item.coread.speed_boat": "Speed Boat",
 
   "item.coread.dynamite": "Dynamite",
   "item.coread.refuge_compass": "Refuge Compass",
