Add chalcedony shard

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -197,6 +197,7 @@
   "item.coread.speed_boat": "Speed Boat",
   "item.coread.speed_chest_boat": "Speed Chest Boat",
 
+  "item.coread.chalcedony_shard": "Chalcedony Shard",
   "item.coread.dynamite": "Dynamite",
   "item.coread.refuge_compass": "Refuge Compass",
 
