Add garnet fragment

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -199,6 +199,7 @@
   "item.coread.speed_chest_boat": "Speed Chest Boat",
 
   "item.coread.chalcedony_shard": "Chalcedony Shard",
+  "item.coread.garnet_fragment": "Garnet Fragment",
   "item.coread.jasper_fragment": "Jasper Fragment",
   "item.coread.dynamite": "Dynamite",
   "item.coread.refuge_compass": "Refuge Compass",
