Add advancement for powering heat stabilizer

--- a/src/main/resources/assets/coread/lang/en_us.json
+++ b/src/main/resources/assets/coread/lang/en_us.json
@@ -253,8 +253,10 @@
   "advancements.coread.core.get_full_gem_armor.description": "Get a full suit of gem armor",
   "advancements.coread.core.cool_with_any.title": "Cool Moment",
   "advancements.coread.core.cool_with_any.description": "Cool down next to ice or snow in core",
-  "advancements.coread.core.cool_with_blue_ice.title": "Sub Zero experience",
+  "advancements.coread.core.cool_with_blue_ice.title": "Sub Zero Experience",
   "advancements.coread.core.cool_with_blue_ice.description": "Cool down next to blue ice in core",
+  "advancements.coread.core.become_heat_immune.title": "Cheating the Heat",
+  "advancements.coread.core.become_heat_immune.description": "Power a heat stabilizer with garnet fragments",
   "advancements.coread.core.follow_refuge_compass.title": "Refuge Lookout",
   "advancements.coread.core.follow_refuge_compass.description": "Follow a Refuge Compass in core",
   "advancements.coread.core.find_refuge.title": "Cave Civilization",
